src/wayland/meta-wayland-text-input.c
@@ -117,11 +117,8 @@ meta_wayland_text_input_focus_commit_text (ClutterInputFocus *focus,
 
   wl_resource_for_each (resource, &text_input->focus_resource_list)
     {
-      gtk_text_input_send_preedit_string (resource, NULL, 0);
       gtk_text_input_send_commit_string (resource, text);
     }
-
-  clutter_input_focus_reset (focus);
 }
 
 static void
